# rust-ffmpeg-frame-grabber

./: Cargo.toml  README.md
data/: README.md
examples/: read_frames.rs
src/: error.rs  ffmpeg.rs  ffprobe.rs  lib.rs  utils.rs
